[package]
name = "mole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gflags = "0.3.11"
rcgen = "0.9.2"
promptly = "0.1.5"
openssl = "0.10.28"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
rand = "0.8"
anyhow = "1.0"
lazy_static = "1.4.0"